--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/firstLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="130sp"
-    android:layout_marginTop="130sp"
+    android:layout_marginStart="0sp"
+    android:layout_marginTop="0sp"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -13,9 +14,35 @@
     <Button
         android:id="@+id/xml_button"
         android:layout_width="wrap_content"
-        android:layout_height="62dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130sp"
+        android:layout_marginTop="130sp"
         android:text="@string/xml_button"
         android:textAlignment="viewStart" />
+
+    <LinearLayout
+        android:id="@+id/secondLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100sp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/bustStNm_editText"
+            android:layout_width="wrap_content"
+            android:layout_height="48sp"
+            android:layout_marginStart="20sp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="@string/station_name"/>
+
+        <Button
+            android:id="@+id/StNm_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20sp"
+            android:text="@string/station_button" />
+    </LinearLayout>
 
 
 </LinearLayout>
