--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,29 +20,48 @@
         android:text="@string/xml_button"
         android:textAlignment="viewStart" />
 
-    <LinearLayout
-        android:id="@+id/secondLinearLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/enterConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100sp"
-        android:orientation="horizontal">
+        android:layout_marginTop="50sp">
 
         <EditText
-            android:id="@+id/bustStNm_editText"
+            android:id="@+id/enterBusName"
             android:layout_width="wrap_content"
             android:layout_height="48sp"
-            android:layout_marginStart="20sp"
+            android:layout_marginTop="112dp"
             android:ems="10"
+            android:hint="@string/enter_bus"
             android:inputType="textPersonName"
-            android:hint="@string/station_name"/>
+            app:layout_constraintBottom_toTopOf="@+id/enterStation"
+            app:layout_constraintStart_toStartOf="@+id/enterStation"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <EditText
+            android:id="@+id/enterStation"
+            android:layout_width="wrap_content"
+            android:layout_height="48sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:ems="10"
+            android:hint="@string/enter_station"
+            android:inputType="textPersonName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/enterBusName" />
 
         <Button
-            android:id="@+id/StNm_button"
+            android:id="@+id/applyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
-            android:text="@string/station_button" />
-    </LinearLayout>
+            android:layout_marginTop="180dp"
+            android:text="@string/apply"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintStart_toEndOf="@+id/enterStation"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
