--- a/app/src/main/res/layout/google_map_practice.xml
+++ b/app/src/main/res/layout/google_map_practice.xml
@@ -6,10 +6,23 @@
     android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView
+        xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/google_map_practice_contentDescription"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        map:cameraBearing="112.5"
+        map:cameraTargetLat="37.566535"
+        map:cameraTargetLng="126.9779692"
+        map:cameraTilt="30"
+        map:cameraZoom="13"
+        map:mapType="normal"
+        map:uiCompass="false"
+        map:uiRotateGestures="true"
+        map:uiScrollGestures="true"
+        map:uiTiltGestures="true"
+        map:uiZoomControls="true"
+        map:uiZoomGestures="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
