--- a/app/src/main/res/layout/client_input.xml
+++ b/app/src/main/res/layout/client_input.xml
@@ -69,4 +69,32 @@
         android:entries="@array/days_of_week"
         app:layout_constraintStart_toEndOf="@+id/day"
         app:layout_constraintTop_toBottomOf="@+id/selected_station" />
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="53dp"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Spinner
+        android:id="@+id/startHourSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="96dp"
+        app:layout_constraintStart_toEndOf="@+id/time"
+        app:layout_constraintTop_toBottomOf="@+id/daySpinner" />
+
+    <Spinner
+        android:id="@+id/endMinuteSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="99dp"
+        app:layout_constraintStart_toEndOf="@+id/startHourSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/daySpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
