--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -36,4 +36,17 @@
         <item>23</item>
         <item>24</item>
     </string-array>
+    <string-array name="minute">
+        <item>00</item>
+        <item>05</item>
+        <item>15</item>
+        <item>20</item>
+        <item>25</item>
+        <item>30</item>
+        <item>35</item>
+        <item>40</item>
+        <item>45</item>
+        <item>50</item>
+        <item>55</item>
+    </string-array>
 </resources>
