--- a/app/src/main/res/layout/client_input.xml
+++ b/app/src/main/res/layout/client_input.xml
@@ -43,22 +43,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="34dp"
-        android:layout_marginTop="114dp"
+        android:layout_marginTop="78dp"
         android:text="@string/pick_a_time"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/day" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/nameOfNotify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="113dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="154dp"
         android:text="@string/name_of_this_notification"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/daySpinner"
@@ -85,16 +85,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginBottom="48dp"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/endMinuteSpinner"
         app:layout_constraintStart_toEndOf="@+id/time"
-        app:layout_constraintTop_toBottomOf="@+id/daySpinner" />
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Spinner
         android:id="@+id/endMinuteSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="99dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginBottom="46dp"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/nameOfNotify"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Spinner
+        android:id="@+id/startHourSpinner2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="200dp"
+        android:minHeight="48dp"
         app:layout_constraintStart_toEndOf="@+id/startHourSpinner"
-        app:layout_constraintTop_toBottomOf="@+id/daySpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/selected_station"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Spinner
+        android:id="@+id/endMinuteSpinner2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="48dp"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toEndOf="@+id/endMinuteSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/startHourSpinner2"
+        tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
