--- a/app/src/main/res/layout/client_input.xml
+++ b/app/src/main/res/layout/client_input.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +10,9 @@
         android:id="@+id/selected_bus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
         android:text="@string/selected_bus_name"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,103 +26,189 @@
         android:layout_marginTop="32dp"
         android:text="@string/selected_station_name"
         android:textSize="24sp"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selected_bus" />
+
+    <!--    <com.google.android.material.chip.ChipGroup-->
+<!--        android:id="@+id/chipGroup"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="32dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginBottom="12dp"-->
+<!--        app:layout_constraintStart_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/day"-->
+<!--        app:singleSelection="false"-->
+<!--        app:singleLine="false">-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/mondayChip"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/monday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/tuesdayChip"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/tuesday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/wednesdayChip"-->
+<!--            android:layout_width="110dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/wednesday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/thursdayChip"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/thursday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/fridayChip"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/friday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/saturdayChip"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/saturday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--        <com.google.android.material.chip.Chip-->
+<!--            android:id="@+id/sundayChip"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:text="@string/sunday"-->
+<!--            app:chipBackgroundColor="@color/chip_background_selector"-->
+<!--            app:checkable="true" />-->
+
+<!--    </com.google.android.material.chip.ChipGroup>-->
 
     <TextView
         android:id="@+id/day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="257dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="168dp"
         android:text="@string/pick_a_day"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroup"
+        app:chipSpacingHorizontal="15dp"
+        app:singleSelection="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/day">
+
+        <com.google.android.material.chip.Chip
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:id="@+id/chip01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:chipMinHeight="5dp"
+            app:chipStartPadding="10dp"
+            app:chipEndPadding="10dp"
+            app:chipBackgroundColor="@color/teal_200"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:text="Chip 1"/>
+
+    </com.google.android.material.chip.ChipGroup>
+
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="12dp"
         android:text="@string/pick_a_time"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/day" />
-
-    <TextView
-        android:id="@+id/nameOfNotify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="154dp"
-        android:text="@string/name_of_this_notification"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />
 
     <Spinner
-        android:id="@+id/daySpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="48sp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="92dp"
-        android:entries="@array/days_of_week"
-        app:layout_constraintStart_toEndOf="@+id/day"
-        app:layout_constraintTop_toBottomOf="@+id/selected_station" />
+        android:id="@+id/startHourSpinner"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toEndOf="@+id/time"
+        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Spinner
+        android:id="@+id/endMinuteSpinner"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Spinner
+        android:id="@+id/startHourSpinner2"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="50dp"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startHourSpinner"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Spinner
+        android:id="@+id/endMinuteSpinner2"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/endMinuteSpinner"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <EditText
+        android:id="@+id/name_of_notification"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="30dp"
+        android:autofillHints="name of notification"
+        android:ems="10"
+        android:hint="@string/name_of_notification"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startHourSpinner2" />
 
     <Button
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="47dp"
-        android:layout_marginBottom="53dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Spinner
-        android:id="@+id/startHourSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="48dp"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/endMinuteSpinner"
-        app:layout_constraintStart_toEndOf="@+id/time"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Spinner
-        android:id="@+id/endMinuteSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginBottom="46dp"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/nameOfNotify"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Spinner
-        android:id="@+id/startHourSpinner2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="200dp"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toEndOf="@+id/startHourSpinner"
-        app:layout_constraintTop_toBottomOf="@+id/selected_station"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Spinner
-        android:id="@+id/endMinuteSpinner2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="48dp"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toEndOf="@+id/endMinuteSpinner"
-        app:layout_constraintTop_toBottomOf="@+id/startHourSpinner2"
-        tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
