action="UPDATE_DATA" still not shown in Log

--- a/app/src/main/res/layout/google_map.xml
+++ b/app/src/main/res/layout/google_map.xml
@@ -16,5 +16,5 @@
         map:uiScrollGestures="true"
         map:uiZoomControls="true"
         map:uiZoomGestures="true"
-        tools:context=".RawMapViewDemoActivity"/>
+        tools:context=".MapViewActivity"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
