CREATE MainScreen.kt and its layout
connected screens with Intent. Also, renamed MainActivity to TwoInputs,
cause it'll be no longer be used as first screen.
p.s. still practicing git flow. Current branch is
feature/screen_afterSet

--- a/app/src/main/res/layout/activity_two_inputs.xml
+++ b/app/src/main/res/layout/activity_two_inputs.xml
@@ -8,7 +8,7 @@
     android:layout_marginStart="0sp"
     android:layout_marginTop="0sp"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".TwoInputs">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
