--- a/app/src/main/res/layout/activity_after_setting.xml
+++ b/app/src/main/res/layout/activity_after_setting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AfterSetting">
+    tools:context=".ListOfAlarm">
 
     <TextView
         android:id="@+id/congrats"
