--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -8,16 +8,61 @@
     android:padding="16dp"
     android:layout_margin="8dp">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/todo"/>
-    <TextView
-        android:id="@+id/item_data"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:layout_marginLeft="24dp"
+        android:layout_width="90dp"
+        android:layout_height="100dp"
+        android:src="@drawable/penny2"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/recyNotiNm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="notinm"
+            android:textSize="16dp"
+            android:layout_marginLeft="30dp"
+            />
+
+        <TextView
+            android:id="@+id/recyBus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bus Name"
+            android:textSize="14dp"
+            android:layout_marginLeft="30dp"
+            />
+
+        <TextView
+            android:id="@+id/recyStation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Station Name"
+            android:textSize="14dp"
+            android:layout_marginLeft="30dp"
+            />
+
+        <TextView
+            android:id="@+id/recySelectedDays"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Selected Days"
+            android:textSize="14dp"
+            android:layout_marginLeft="30dp"
+            />
+
+        <TextView
+            android:id="@+id/recyWhentoWhen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="When to When"
+            android:textSize="14dp"
+            android:layout_marginLeft="30dp"
+            />
+
+
+    </LinearLayout>
 </LinearLayout>
