--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
 <!--    <style name="Theme.RunRun" parent="Theme.AppCompat.Light.DarkActionBar"/>-->
+<!--  Preferences 한다고 바꿈
+<style name="AppTheme"  parent="Theme.MaterialComponents.Light.Bridge"> -->
     <style name="AppTheme"  parent="Theme.MaterialComponents.Light.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
