--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -11,6 +11,7 @@
         android:layout_width="90dp"
         android:layout_height="100dp"
         android:src="@drawable/penny2"
+        android:id="@+id/recyImage"
         />
     <LinearLayout
         android:layout_width="match_parent"
