--- a/app/src/main/res/xml/network_config.xml
+++ b/app/src/main/res/xml/network_config.xml
@@ -3,5 +3,8 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">ws.bus.go.kr</domain>
+        <domain includeSubdomains="true">apis.data.go.kr</domain>
+        <domain includeSubdomains="true">www.googleapis.com</domain>
     </domain-config>
+
 </network-security-config>
