satellite 이미지 API 가져오는 거 성공

--- a/app/src/main/res/xml/network_config.xml
+++ b/app/src/main/res/xml/network_config.xml
@@ -5,6 +5,7 @@
         <domain includeSubdomains="true">ws.bus.go.kr</domain>
         <domain includeSubdomains="true">apis.data.go.kr</domain>
         <domain includeSubdomains="true">www.googleapis.com</domain>
+        <domain includeSubdomains="true">www.kma.go.kr</domain>
     </domain-config>
 
 </network-security-config>
